# cpp-course

./: .gitignore  .gitmodules  README.md
week1/: README.md
week1/thursday/: README.md
week1/tuesday/: README.md
week1/tuesday/Assignment_1_2_1/: main.cpp
week1/tuesday/Assignment_1_2_2/: main.cpp
week1/tuesday/Assignment_1_2_3/: main.cpp
week1/tuesday/Assignment_1_2_4/: main.cpp
week1/tuesday/Assignment_1_2_5/: main.cpp
week1/wednesday/: README.md
week1/wednesday/Assignment_1_3_2/: CMakeLists.txt  README.md  bank.h  bank_db  banking.cpp  interface_prints.cpp  interface_prints.cpp.cpp  main.cpp  prints.cpp  structs.h  user_management.cpp
week10/: README.md
week10/d01/: README.md
week10/d01/Assignment_10_1_1/: README.md  main.cpp
week10/d01/Assignment_10_1_2/: README.md  main.cpp
week10/d02/: README.md
week10/d02/Assignment_10_2_1/: README.md  main.cpp
week10/d03/: README.md
week10/d03/Assignment_10_3_1/: README.md  main.cpp
week10/d04/: README.md
week10/d04/Assignment_10_4_1/: README.md  eurooppa.json  main.cpp
week2/: README.md
week2/d01/: README.md
week2/d01/Assignment_2_1_1/: README.md  main.cpp
week2/d01/Assignment_2_1_2/: README.md  main.cpp
week2/d01/Assignment_2_1_3/: README.md  main.cpp
week2/d02/: README.md
week2/d02/Assignment_2_2_1/: CMakeLists.txt  README.md  main.cpp
week2/d02/Assignment_2_2_2/: CMakeLists.txt  main  main.cpp
week2/d02/Assignment_2_2_3/: CMakeLists.txt  main.cpp
week2/d03/: README.md
week2/d03/Assignment_2_3_1/: CMakeLists.txt  main.cpp
week2/d03/Assignment_2_3_2/: CMakeLists.txt  main.cpp
week2/d04/: README.md
week2/d04/Assignment_2_4_1/: CMakeLists.txt  README.md  main.cpp
week2/d04/Assignment_2_4_1/includes/: char_count.h  dir_size.h  line_count.h  print_file.h  word_count.h
week2/d04/Assignment_2_4_1/src/: CMakeLists.txt  char_count.cpp  dir_size.cpp  line_count.cpp  print_file.cpp  word_count.cpp
week2/d04/Assignment_2_4_2/: CMakeLists.txt  README.md  main.cpp
week3/: README.md
week3/Assessment_test_1/: CMakeLists.txt  README.md  main.cpp
week3/Assessment_test_1/includes/: structs.h  transactions.h  utils.h
week3/Assessment_test_1/src/: CMakeLists.txt  transactions.cpp  utils.cpp
week3/Assessment_test_1/tests/: CMakeLists.txt  bank_wallet_tests.cpp
week3/d01/: README.md
week3/d01/Assignment_3_1_1/: README.md  ex1.cpp  ex2.cpp  ex2_testfile  ex3.cpp  ex4.cpp
week3/d01/Assignment_3_1_2/: CMakeLists.txt  README.md  main.cpp
week3/d01/Assignment_3_1_2/includes/: generate_data.h  utils.h  weather.h
week3/d01/Assignment_3_1_2/src/: CMakeLists.txt  generate_data.cpp  utils.cpp  weather_checks.cpp
week3/d02/: README.md
week3/d02/Assignment_3_2_1/: README.md  main.cpp
week3/d02/Assignment_3_2_2/: CMakeLists.txt  README.md  main.cpp
week3/d02/Assignment_3_2_3/: README.md  main.cpp
week3/d03/: README.md
week3/d03/Assignment_3_3_1/: README.md  main.cpp
week3/d03/Assignment_3_3_2/: CMakeLists.txt  README.md  main.cpp
week3/d03/Assignment_3_3_2/tests/ex1/: CMakeLists.txt  math_functions_tests.cpp
week3/d03/Assignment_3_3_2/tests/ex2/: CMakeLists.txt  string_utility_tests.cpp
week6/: README.md
week6/d01/: README.md
week6/d01/Assignment_6_1_1/: README.md  ex1.cpp  ex2.cpp  (+1 more)
week6/d01/Assignment_6_1_2/: CMakeLists.txt  README.md  main.cpp
week6/d01/Assignment_6_1_2/includes/: entity.h
week6/d01/Assignment_6_1_2/src/: CMakeLists.txt  entity.cpp
week6/d02/: README.md
week6/d03/: README.md
week6/d04/: README.md
week7/: README.md
week7/d01/: README.md
week7/d02/: README.md
week7/d03/: README.md
week7/d04/: README.md
week8/: README.md
week8/d01/: README.md
week8/d02/: README.md
week8/d03/: README.md
week8/d03/Assignment_8_3_1/: CMakeLists.txt  README.md  main.cpp
week8/d03/Assignment_8_3_1/includes/: heap_array.hpp
week8/d03/Assignment_8_3_1/tests/: CMakeLists.txt  heap_array_tests.cpp
week8/d04/: README.md
week8/d04/Assignnment_8_4_1/: CMakeLists.txt  main.cpp
week8/d04/Assignnment_8_4_1/includes/: ex1.hpp  ex2.hpp
week8/d04/Assignnment_8_4_1/tests/: test.cpp
week8/d05/: README.md
week9/: README.md
week9/d01/: README.md
week9/d01/Assignment_9_1_1/: CMakeLists.txt  README.md  ex1.cpp  ex2.cpp
week9/d01/Assignment_9_1_1/includes/: math.hpp
week9/d01/Assignment_9_1_1/src/: CMakeLists.txt  math.cpp
week9/d02/: README.md
week9/d03/: README.md
week9/d04/: README.md
(+164 files in other folders)
